[package]
name = "minecator"
version = "0.1.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2018"

[dependencies]
bitvec = "0.19"
byteorder = "1.3"
clap = {version = "2.33", features = ["yaml"]}
futures = "0.3"
hashbrown = {version = "0.9", features = ["rayon"]}
hematite-nbt = "0.5"
indicatif = "0.15"
kiss3d = "0.27"
lazy_static = "1.4"
log = "0.4"
nalgebra = "0.23"
nom = "5.1"
png = "0.16"
rayon = "1.5"
serde_json = "1.0"
simplelog = "0.8"
