[package]
name = "minecator"
version = "0.1.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.4"
clap = "2.33"
hashbrown = { version = "0.11", features = ["rayon", "serde"] }
hematite-nbt = "0.5"
image = "0.23"
indicatif = "0.16"
lazy_static = "1.4"
log = "*"
nom = "6.2"
rayon = "1.5"
serde_json = "1.0"
simplelog = "0.10"
